--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -14,6 +14,7 @@
 }
 
 /* Добавляем белый фон над хедером */
+/* Удаляем ненужную белую полосу в верхней части экрана 
 body::before {
   content: '';
   position: fixed;
@@ -24,6 +25,7 @@ body::before {
   background-color: white;
   z-index: var(--z-fixed);
 }
+*/
 
 .header-container {
   position: relative;
