--- a/src/styles/intro.css
+++ b/src/styles/intro.css
@@ -1,8 +1,9 @@
 /* IntroSection Styles */
 
 .intro-section {
+  padding-top: 200px;
+  padding-bottom: 100px;
   position: relative;
-  padding: 0px 0 100px 0;
   overflow: visible;
   min-height: 60vh;
   display: flex;
@@ -13,7 +14,7 @@
 
 .intro-section .content-wrapper {
   position: relative;
-  z-index: 1;
+  z-index: var(--z-normal);
   max-width: 1200px;
   margin: 0 auto;
   padding: 0 20px;
@@ -195,4 +196,20 @@
   .intro-section h3 {
     font-size: var(--h4-mobile);
   }
+}
+
+.intro-content {
+  position: relative;
+  z-index: var(--z-normal);
+}
+
+.background-animation {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background-size: 400% 400%;
+  animation: gradient 15s ease infinite;
+  z-index: var(--z-back);
 } 
