--- a/src/styles/intro.css
+++ b/src/styles/intro.css
@@ -10,6 +10,7 @@
   align-items: center;
   justify-content: center;
   color: var(--text-dark);
+  background-color: white;
 }
 
 .intro-section .content-wrapper {
