Обновление проекта Indiamonds

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -16,6 +16,8 @@
 @import './quality.css';
 @import './contacts.css';
 @import './clients.css';
+@import './mobile-home.css';
+@import './tablet-home.css';
 
 /* Импортируем Font Awesome для иконок */
 @import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css');
